cambiar getFirst y getLast por get(0) y get(1)